--- a/index.html
+++ b/index.html
@@ -7,19 +7,35 @@
     body { font-family: sans-serif; max-width: 600px; margin: 40px auto; text-align: center; }
     #dropzone { border: 3px dashed #888; padding: 40px; margin-top: 30px; cursor: pointer; border-radius: 10px; transition: 0.3s; }
     #dropzone.hover { background-color: #f0f0f0; }
+    #preview { margin-top: 20px; }
     #output img { max-width: 100%; margin-top: 20px; }
     .copy-btn { padding: 6px 10px; margin-top: 10px; cursor: pointer; }
+    .link-btn { margin-top: 10px; padding: 6px 10px; background-color: #007bff; color: white; cursor: pointer; border-radius: 5px; }
+    .link-btn:hover { background-color: #0056b3; }
+    .preview-img { max-width: 100%; height: auto; border: 1px solid #ddd; border-radius: 5px; }
+    .upload-btn { margin-top: 20px; padding: 10px 15px; background-color: #28a745; color: white; cursor: pointer; border-radius: 5px; }
+    .upload-btn:hover { background-color: #218838; }
   </style>
 </head>
 <body>
   <h1>Secure GitHub Image Uploader</h1>
   <div id="dropzone">Drag & drop image here or click to select</div>
   <input type="file" id="fileInput" accept="image/*" style="display:none">
+  
+  <!-- Preview Section -->
+  <div id="preview"></div>
+  
+  <!-- Upload Button -->
+  <button id="uploadBtn" class="upload-btn" style="display:none;" onclick="uploadImage()">Upload Image</button>
+
   <div id="output"></div>
 
   <script>
     const dropzone = document.getElementById('dropzone');
     const fileInput = document.getElementById('fileInput');
+    const previewContainer = document.getElementById('preview');
+    const uploadButton = document.getElementById('uploadBtn');
+    let selectedFile = null;
 
     dropzone.addEventListener('click', () => fileInput.click());
     fileInput.addEventListener('change', () => handleFile(fileInput.files[0]));
@@ -38,12 +54,35 @@
       if (file) handleFile(file);
     });
 
-    async function handleFile(file) {
+    function handleFile(file) {
       if (file.size > 25 * 1024 * 1024) {
         alert("File exceeds 25MB limit."); return;
       }
+      
+      // Preview Image
+      const reader = new FileReader();
+      reader.onload = function(event) {
+        const previewImg = document.createElement('img');
+        previewImg.src = event.target.result;
+        previewImg.classList.add('preview-img');
+        previewContainer.innerHTML = ''; // Clear previous preview
+        previewContainer.appendChild(previewImg);
+        
+        // Show the upload button after the preview is set
+        uploadButton.style.display = 'inline-block';
+        selectedFile = file; // Save selected file
+      };
+      reader.readAsDataURL(file);
+    }
+
+    async function uploadImage() {
+      if (!selectedFile) {
+        alert("No file selected.");
+        return;
+      }
+
       const formData = new FormData();
-      formData.append("image", file);
+      formData.append("image", selectedFile);
 
       const res = await fetch("/api/upload", {
         method: "POST",
@@ -54,14 +93,17 @@
       const output = document.getElementById('output');
       if (res.ok) {
         output.innerHTML = `
-          <p>Uploaded:</p>
-          <img src="${data.url}" alt="Uploaded">
-          <a href="${data.url}" target="_blank">${data.url}</a>
+          <p>Uploaded successfully!</p>
+          <img src="${data.url}" alt="Uploaded Image">
+          <a href="${data.url}" target="_blank" class="link-btn">Go to Image</a>
           <button class="copy-btn" onclick="navigator.clipboard.writeText('${data.url}')">Copy Link</button>
         `;
       } else {
         output.innerHTML = `<p style="color:red;">${data.error}</p>`;
       }
+
+      // Hide upload button after upload
+      uploadButton.style.display = 'none';
     }
   </script>
 </body>
